# ClearFeed

./: .gitignore  .pre-commit-config.yaml  LICENSE  M4_MODEL_RESOURCE_DOCUMENTATION_Yuri.md  README.md  main.py  pyproject.toml  setup-gitflow.sh
.github/workflows/: lint.yml  run-tests.yaml  run-tests.yml
backend/: manage.py
backend/api/: apps.py  models.py  tests.py  urls.py  views.py
backend/api/management/commands/: analyze_pending.py
backend/api/migrations/: 0001_initial.py  0002_repair_appuser_auth_columns.py  0003_repair_appuser_email_column.py
backend/api/services/: analysis.py  ingestion.py  political_leaning.py  sentiment.py  topic.py  toxicity.py
backend/clearfeed_django/: asgi.py  settings.py  urls.py  wsgi.py
database/: schema.dbml  schema.sql
docs/: Model_Resource_Documentation.md  architecture.md  changelog.md  index.md  models.md
docs/decisions/: zeeschuimer_decisions.md
docs/endpoints/: admin.md  analysis.md
docs/milestones/: milestone1.md  milestone2.md  milestone4.md
docs/milestones/milestone3/: m3_data_model.dbml  m3_data_model.md  milestone3.md
static/css/: style.css
static/js/: auth.js
templates/: base.html  home.html  privacy.html  promoted.html  topics.html
templates/registration/: login.html  signup.html
tests/: basic_test.py
