[project]
name = "clearfeed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.4",
    "torch>=2.7.0",
    "transformers>=4.51.0",
]

[dependency-groups]
test = [
    "pytest>=8.3.5",
]
dev = [
    "pre-commit>=4.6.0",
]
