[project]
name = "clearfeed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.4",
    "dj-database-url>=2.3.0",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.1.0",
    "torch>=2.7.0",
    "transformers>=4.51.0",
]

[dependency-groups]
test = [
    "pytest>=8.3.5",
]
