[project]
name = "clearfeed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.4",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
    "torch>=2.7.0",
    "transformers>=4.51.0",
]

[dependency-groups]
test = [
    "pytest>=8.3.5",
]
dev = [
    "pre-commit>=4.6.0",
]
